feat: 角色绑定资源
